--- a/Localeyes/Base.lproj/Main.storyboard
+++ b/Localeyes/Base.lproj/Main.storyboard
@@ -20,26 +20,28 @@
                                 <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="45D-hG-hUW">
-                                        <rect key="frame" x="687" y="959" width="54" height="30"/>
+                                        <rect key="frame" x="604" y="943" width="144" height="34"/>
                                         <state key="normal" title="Preview">
+                                            <color key="titleColor" red="0.035294117649999998" green="0.29803921570000003" blue="0.57647058819999997" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                     </button>
-                                    <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="instagram12" translatesAutoresizingMaskIntoConstraints="NO" id="HLt-mc-qs2">
-                                        <rect key="frame" x="726" y="36" width="34" height="34"/>
+                                    <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="photos" translatesAutoresizingMaskIntoConstraints="NO" id="HLt-mc-qs2">
+                                        <rect key="frame" x="714" y="41" width="34" height="34"/>
                                     </imageView>
-                                    <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="camera60" translatesAutoresizingMaskIntoConstraints="NO" id="nxw-4Y-f34">
-                                        <rect key="frame" x="726" y="85" width="34" height="34"/>
+                                    <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="column" translatesAutoresizingMaskIntoConstraints="NO" id="nxw-4Y-f34">
+                                        <rect key="frame" x="714" y="90" width="34" height="34"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Shoot" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p8O-lw-6Ih">
-                                        <rect key="frame" x="472" y="40" width="246" height="26"/>
+                                        <rect key="frame" x="460" y="45" width="246" height="26"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <color key="textColor" red="0.035294117649999998" green="0.29803921570000003" blue="0.57647058819999997" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="USb-ea-qfE">
-                                        <rect key="frame" x="64" y="959" width="104" height="30"/>
+                                        <rect key="frame" x="127" y="943" width="174" height="34"/>
                                         <state key="normal" title="New Column">
+                                            <color key="titleColor" red="0.035294117649999998" green="0.29803921570000003" blue="0.57647058819999997" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
@@ -47,16 +49,16 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YfG-bJ-hL0" userLabel="shooterButton">
-                                        <rect key="frame" x="664" y="461" width="100" height="101"/>
-                                        <state key="normal" image="shooterFull"/>
+                                        <rect key="frame" x="652" y="466" width="100" height="101"/>
+                                        <state key="normal" image="shoot"/>
                                         <connections>
                                             <action selector="takePhoto:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iH4-8O-9G0"/>
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Column" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fn3-vL-eCc">
-                                        <rect key="frame" x="594" y="91" width="124" height="21"/>
+                                        <rect key="frame" x="582" y="96" width="124" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <color key="textColor" red="0.035294117649999998" green="0.29803921570000003" blue="0.57647058819999997" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView userInteractionEnabled="NO" alpha="0.5499999999999996" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BaC-wd-oq4">
@@ -65,6 +67,12 @@
                                     <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qpJ-VY-Cve">
                                         <rect key="frame" x="-67" y="0.0" width="167" height="1024"/>
                                         <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="preview" translatesAutoresizingMaskIntoConstraints="NO" id="eeU-nq-s1F">
+                                        <rect key="frame" x="714" y="943" width="34" height="34"/>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="add" translatesAutoresizingMaskIntoConstraints="NO" id="d49-ks-Tjm">
+                                        <rect key="frame" x="127" y="943" width="34" height="34"/>
                                     </imageView>
                                 </subviews>
                             </view>
@@ -104,9 +112,11 @@
         </scene>
     </scenes>
     <resources>
-        <image name="camera60" width="24" height="24"/>
-        <image name="instagram12" width="24" height="24"/>
-        <image name="shooterFull" width="128" height="128"/>
+        <image name="add" width="64" height="64"/>
+        <image name="column" width="64" height="64"/>
+        <image name="photos" width="64" height="64"/>
+        <image name="preview" width="64" height="64"/>
+        <image name="shoot" width="128" height="128"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
