--- a/Localeyes/Base.lproj/Main.storyboard
+++ b/Localeyes/Base.lproj/Main.storyboard
@@ -74,6 +74,9 @@
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="add" translatesAutoresizingMaskIntoConstraints="NO" id="d49-ks-Tjm">
                                         <rect key="frame" x="127" y="943" width="34" height="34"/>
                                     </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="NewFocus" translatesAutoresizingMaskIntoConstraints="NO" id="lse-2d-2ps">
+                                        <rect key="frame" x="209" y="389" width="350" height="256"/>
+                                    </imageView>
                                 </subviews>
                             </view>
                         </subviews>
@@ -112,6 +115,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="NewFocus" width="350" height="256"/>
         <image name="add" width="64" height="64"/>
         <image name="column" width="64" height="64"/>
         <image name="photos" width="64" height="64"/>
